--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="1; url='https://withjoy.com/ananya-and-muntaqim'" />
+    <title>Ananya & Muntaqim</title>
+    <meta http-equiv="refresh" content="0; url='https://withjoy.com/ananya-and-muntaqim'" />
+    <script type="text/javascript">
+            window.location.href = "https://withjoy.com/ananya-and-muntaqim"
+        </script>
   </head>
   <body>
     <p>Please follow <a href="https://withjoy.com/ananya-and-muntaqim">this link</a>.</p>
